fixed issue with scontent sction stretching too far

--- a/style.css
+++ b/style.css
@@ -2,35 +2,37 @@ body{
     display: flex;
     margin: 0;
     padding: 0px;
+    height: 100%;
 }
 .container{
     width: 100%;
+    height: 100%;
     display: grid;
     grid-template-columns: 1fr 4fr;
-    grid-template-rows: 1fr 10fr;
+    grid-template-rows: 30% 85%;
 }
 .header{
     display: grid;
     grid-area: 1/2/1/2;
-    background-color: rgb(255, 255, 255);
+    background-color: rgb(246, 174, 132);
     grid-template: 1fr 1fr / 2fr 1fr;
+    filter: drop-shadow(0 5px 4px #797979c5);
 }
 .searchBar{
     margin-top: 25px;
     grid-area: 1/1/1/1;
 }
 form.search input[type=text] {
-    margin-top: 15px;
     padding: 10px;
-    font-size: 15px;
-    border: 1px solid grey;
+    font-size: 17px;
+    border: none;
     border-radius: 20px;
     float: left;
     width: 70%;
-    background: #f1f1f1;
+    background: #dfdede;
   }
   form.search button {
-    margin: 15px 20px 10px 3%;
+    margin: 0px 15px 0px 30px;
     float: left;
     width: 3%;
     height: 40px;
@@ -51,16 +53,16 @@ form.search input[type=text] {
     margin: 0px 10px -100px 50px;
 }
 .hi{
-    margin-left: -10px;
+    color: rgb(73, 95, 166);
     align-items: center;
     grid-area: 1/2/2/2;
+    font-weight: bold;
 }
 .hi p1{
 font-size: 20px;
 }
 .hi p2{
     font-size: 35px;
-    font-weight: bold;
     }
 .picture, .pictureArea{
     height: auto;
@@ -84,9 +86,18 @@ font-size: 20px;
     background-color: rgb(73, 95, 166);
     border-radius: 20px;
     color: rgb(246, 174, 132);
-    font-size: 16px;
+    font-size: 20px;
     font-weight: bold;
-    padding: 13px 50px;
+    padding: 10px 40px;
+}
+.actions{
+    grid-area: 1/2/1/2;
+}
+.actions ul{
+    display: flex;
+    list-style: none;
+    gap: 20px;
+    margin-top: 30px;
 }
 
 .sidebar{
@@ -95,12 +106,13 @@ font-size: 20px;
     background-color: rgb(73, 95, 166);
     color: rgb(246, 174, 132);
     font-size: 35px;
-    grid-template: 5% 17% 50%/1fr;
+    grid-template: 15% 30% 30% /1fr;
+    align-items: center;
 }
 .sidebar ul{
     display: flex;
     flex-direction: column;
-    gap: 10px;
+    gap: 15px;
 }
 .sidebar li{
     display: flex;
@@ -128,6 +140,17 @@ font-size: 20px;
     width: 40px;
 }
 .mainContent{
-    background-color: rgb(194, 193, 193);
+    background-color: rgb(216, 215, 215);
     grid-area: 2/2/2/2;
+    display: grid;
+    grid-template: 50% 50% / 3fr 1fr;
+}
+.yourProjects{
+    grid-area: 1 / 1 / 2 /1;
+}
+.announcements{
+    grid-area: 1 / 2 / 1 /2;
+}
+.trending{
+    grid-area: 2 / 2 / 2 /2;
 }
